--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <span class="search-form__label-text visually-hidden">Город</span>
               <input
                 type="text"
-                placeholder="Санкт Петербург, например"
+                placeholder="Санкт-Петербург, например"
                 name="city"
                 class="search-form__textfield"
               />
@@ -80,7 +80,8 @@
     </main>
 
     <!-- ТЕМПЛЕЙТЫ -->
-
+    <!--Шаблон прелоадера - пока данные загружаются, мы создаём экземпляры прелоадера и вставляем в зоны,
+     куда будет вставлен контент. Когда контент готов, мы убираем прелоадеры.-->
     <template class="preloader-template">
       <div class="preloader">
         <div class="preloader-chasing-squares">
@@ -91,7 +92,8 @@
         </div>
       </div>
     </template>
-
+    <!--Шаблон пункта списка с карточкой видео — в него мы подставляем данные и
+     создаём столько карточек на странице, сколько нужно, добавляя их в список.-->
     <template class="cards-list-item-template">
       <li class="content__list-item">
         <a href="#0" class="content__card-link">
@@ -104,11 +106,15 @@
           </article>
         </a>
       </li>
+    <!--Шаблон кнопки «Показать ещё» — мы подставляем эту кнопку в конец списка карточек каждый раз,
+     когда доступны дополнительные видео. 
+     Нажатие на эту кнопку подгружает пять дополнительных карточек.--> 
     </template>
     <template class="more-button-template">
       <li><button class="button more-button">Показать еще</button></li>
     </template>
-
+    <!--Шаблон блока с ошибкой — в зависимости от типа ошибки, мы выбираем текст для неё,
+     создаём экземпляр шаблона с текстом и вставляем на страницу.-->
     <template class="error-template">
       <div class="error">
         <h2 class="error__title"></h2>
